<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorPrimary"
         tools:context=".MainActivity"
         tools:ignore="LabelFor">

     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/chinese"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:id="@+id/selectedfoodtxt"
             android:fontFamily="sans-serif-medium" android:textSize="45sp" android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" android:textStyle="bold"/>
    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/dd_logo"
            android:id="@+id/imageView2" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/todo"
    />
    <Button
            android:text="@string/decide"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:id="@+id/decidebtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="20sp"
            android:fontFamily="sans-serif" android:typeface="sans" android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/addfoodtxt"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/selectedfoodtxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/decidebtn"
            android:autofillHints="" android:hint="@string/add_your_food"
            android:fontFamily="sans-serif-medium"/>
    <Button
            android:text="@string/add_food"
            android:layout_width="221dp"
            android:layout_height="60dp"
            android:id="@+id/addfoodbtn"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addfoodtxt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textStyle="bold"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toTopOf="@+id/decidebtn" android:textSize="20sp"/>


</android.support.constraint.ConstraintLayout>